# spotify-buddy

./: .gitignore  CMakeLists.txt  pico_sdk_import.cmake  spotify-buddy.c
include/: eeprom.h  picohttps.h  tftlcd.h
src/: eeprom.c  picohttps.c  tftlcd.c
